edit Profile and dashboard

--- a/PBSS/positivebehaviour/static/css/style.css
+++ b/PBSS/positivebehaviour/static/css/style.css
@@ -487,3 +487,8 @@ a.btn:focus{outline: 0;}
      color: #666;
      cursor: pointer;
 }
+
+.rounded-circle{
+    border-radius: 50%;
+    width: 200%;
+}
