--- a/PBSS/positivebehaviour/templates/positivebehaviour/index.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/index.html
@@ -286,7 +286,7 @@
                                 </div>
                             </li>
                             <li>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus ea, perferendis error repudiandae numquam dolor fuga temporibus. Unde omnis, consequuntur.</p>
+                                <p>FBA tool has been implemented successfully on our firm the understanding of the support workers on client has been improved </p>
                                 <div class="cd-author">
                                     <img src="{% static 'images/avatar.png' %}" alt="">
                                     <ul class="cd-author-info">
@@ -296,7 +296,7 @@
                                 </div>
                             </li>
                             <li>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam totam nulla est, illo molestiae maxime officiis, quae ad, ipsum vitae deserunt molestias eius alias.</p>
+                                <p>FBA tool has been implemented successfully on our firm the understanding of the support workers on client has been improved </p>
                                 <div class="cd-author">
                                     <img src="{% static 'images/avatar.png' %}" alt="">
                                     <ul class="cd-author-info">
@@ -314,8 +314,7 @@
                         <div class="cd-testimonials-all-wrapper">
                             <ul>
                                 <li class="cd-testimonials-item">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit totam saepe iste maiores neque animi molestias nihil illum nisi temporibus.</p>
-
+                                    <p>FBA tool has been implemented successfully on our firm the understanding of the support workers on client has been improved </p>
                                     <div class="cd-author">
                                         <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
@@ -325,8 +324,7 @@
                                     </div> <!-- cd-author -->
                                 </li>
                                 <li class="cd-testimonials-item">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore nostrum nisi, doloremque error hic nam nemo doloribus porro impedit perferendis. Tempora, distinctio hic suscipit. At ullam eaque atque recusandae modi fugiat voluptatem laborum laboriosam rerum, consequatur reprehenderit omnis, enim pariatur nam, quidem, quas vel reiciendis aspernatur consequuntur. Commodi quasi enim, nisi alias fugit architecto, doloremque, eligendi quam autem exercitationem consectetur.</p>
-
+                                    <p>FBA tool has been implemented successfully on our firm the understanding of the support workers on client has been improved </p>
                                     <div class="cd-author">
                                         <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
@@ -336,8 +334,7 @@
                                     </div> <!-- cd-author -->
                                 </li>
                                 <li class="cd-testimonials-item">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem quibusdam eveniet, molestiae laborum voluptatibus minima hic quasi accusamus ut facere, eius expedita, voluptatem? Repellat incidunt veniam quaerat, qui laboriosam dicta. Quidem ducimus laudantium dolorum enim qui at ipsum, a error.</p>
-
+                                    <p>FBA tool has been implemented successfully on our firm the understanding of the support workers on client has been improved </p>
                                     <div class="cd-author">
                                         <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
@@ -347,8 +344,7 @@
                                     </div> <!-- cd-author -->
                                 </li>
                                 <li class="cd-testimonials-item">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero voluptates officiis tempore quae officia! Beatae quia deleniti cum corporis eos perferendis libero reiciendis nemo iusto accusamus, debitis tempora voluptas praesentium repudiandae laboriosam excepturi laborum, nisi optio repellat explicabo, incidunt ex numquam. Ullam perferendis officiis harum doloribus quae corrupti minima quia, aliquam nostrum expedita pariatur maxime repellat, voluptas sunt unde, inventore.</p>
-
+                                    <p>FBA tool has been implemented successfully on our firm the understanding of the support workers on client has been improved </p>
                                     <div class="cd-author">
                                         <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
@@ -358,8 +354,7 @@
                                     </div> <!-- cd-author -->
                                 </li>
                                 <li class="cd-testimonials-item">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit totam saepe iste maiores neque animi molestias nihil illum nisi temporibus.</p>
-
+                                    <p>FBA tool has been implemented successfully on our firm the understanding of the support workers on client has been improved </p>
                                     <div class="cd-author">
                                         <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
@@ -369,8 +364,7 @@
                                     </div> <!-- cd-author -->
                                 </li>
                                 <li class="cd-testimonials-item">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis quia quas, quis illo adipisci voluptate ex harum iste commodi nulla dolor. Eius ratione quod ab!</p>
-
+                                    <p>FBA tool has been implemented successfully on our firm the understanding of the support workers on client has been improved </p>
                                     <div class="cd-author">
                                         <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
@@ -380,8 +374,7 @@
                                     </div> <!-- cd-author -->
                                 </li>
                                 <li class="cd-testimonials-item">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, dignissimos iure rem fugiat consequuntur officiis.</p>
-
+                                    <p>FBA tool has been implemented successfully on our firm the understanding of the support workers on client has been improved </p>
                                     <div class="cd-author">
                                         <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
@@ -391,8 +384,7 @@
                                     </div> <!-- cd-author -->
                                 </li>
                                 <li class="cd-testimonials-item">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At temporibus tempora necessitatibus reiciendis provident deserunt maxime sit id. Dicta aut voluptatibus placeat quibusdam vel, dolore.</p>
-
+                                    <p>FBA tool has been implemented successfully on our firm the understanding of the support workers on client has been improved </p>
                                     <div class="cd-author">
                                         <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
@@ -402,8 +394,7 @@
                                     </div> <!-- cd-author -->
                                 </li>
                                 <li class="cd-testimonials-item">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis iusto sapiente, excepturi velit, beatae possimus est tenetur cumque fugit tempore dolore fugiat! Recusandae, vel suscipit? Perspiciatis non similique sint suscipit officia illo, accusamus dolorum, voluptate vitae quia ea amet optio magni voluptatem nemo, natus nihil.</p>
-
+                                    <p>FBA tool has been implemented successfully on our firm the understanding of the support workers on client has been improved </p>
                                     <div class="cd-author">
                                         <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
@@ -413,8 +404,7 @@
                                     </div> <!-- cd-author -->
                                 </li>
                                 <li class="cd-testimonials-item">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor quasi officiis pariatur, fugit minus omnis animi ut assumenda quod commodi, ad a alias maxime unde suscipit magnam, voluptas laboriosam ipsam quibusdam quidem, dolorem deleniti id.</p>
-
+                                    <p>FBA tool has been implemented successfully on our firm the understanding of the support workers on client has been improved </p>
                                     <div class="cd-author">
                                         <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
@@ -424,8 +414,7 @@
                                     </div> <!-- cd-author -->
                                 </li>
                                 <li class="cd-testimonials-item">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At temporibus tempora necessitatibus reiciendis provident deserunt maxime sit id. Dicta aut voluptatibus placeat quibusdam vel, dolore.</p>
-
+                                    <p>FBA tool has been implemented successfully on our firm the understanding of the support workers on client has been improved </p>
                                     <div class="cd-author">
                                         <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
@@ -435,7 +424,7 @@
                                     </div> <!-- cd-author -->
                                 </li>
                                 <li class="cd-testimonials-item">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque tempore ipsam, eos suscipit nostrum molestias reprehenderit, rerum amet cum similique a, ipsum soluta delectus explicabo nihil repellat incidunt! Minima magni possimus mollitia deserunt facere, tempore earum modi, ea ipsa dicta temporibus suscipit quidem ut quibusdam vero voluptatibus nostrum excepturi explicabo nulla harum, molestiae alias. Ab, quidem rem fugit delectus quod.</p>
+                                    <p>FBA tool has been implemented successfully on our firm the understanding of the support workers on client has been improved </p>
                                     <div class="cd-author">
                                         <img src="{% static 'images/avatar.png' %}" alt="">
                                         <ul class="cd-author-info">
