--- a/PBSS/users/templates/users/logout.html
+++ b/PBSS/users/templates/users/logout.html
@@ -18,8 +18,9 @@
                             <div class="col-lg-12"><br><br>
                             <h2>You have been logged out</h2>
                             <hr>
-                            <div class="intro"><a href="{% url 'login' %}"> Log In Again</a></div>
-
+                            <div class="intro col text-center">
+                                <a href="{% url 'index' %}" style="margin-right: 5%;"> Home</a>
+                               <a href="{% url 'login' %}"> Log In Again</a></div>
                         </div>
                         </div>
                         <div class="col-sm-6 box-item">
