--- a/PBSS/freefbaform/templates/freefbaform/fbabase.html
+++ b/PBSS/freefbaform/templates/freefbaform/fbabase.html
@@ -35,7 +35,7 @@
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
-                <a class="navbar-brand page-scroll" href="#page-top">PBSS</a>
+                <a class="navbar-brand page-scroll" href="{% url 'index' %}">PBSS</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
