--- a/PBSS/freefbaform/templates/freefbaform/freefbaform.html
+++ b/PBSS/freefbaform/templates/freefbaform/freefbaform.html
@@ -11,6 +11,7 @@
                             <hr>
                         </div>
                     </div><button class="btn btn-3 btn-sm" onclick="myFunction()" name="print" id="print" style="float: right;">Print</button>
+                        <button class="btn btn-3 btn-sm"  style="float: right; margin-right: 2%;">Next</button>
                             <div class="row">
                         <div class="col-md-4">
                             <div class="row box-item"><br><br>
@@ -122,15 +123,15 @@
 
                             </div>
                             </div>
-<!--                            <div class="col-sm-6 box-item">-->
-<!--                                <div class="col-lg-12"><br><br>-->
-<!--                                <h2>Anticident</h2>-->
-<!--                                <hr>-->
-<!--                                    <form>-->
-
-<!--                                    </form>-->
-<!--                            </div>-->
-<!--                            </div>-->
+                            <div class="col-sm-6 box-item">
+                                <div class="col-lg-12"><br><br>
+                                <h2>Flowchart</h2>
+                                <hr>
+                                    <form>
+                                    <img src="{% static 'images/freefbaform.png' %}" alt="freefbaform" class="freefbaform">
+                                    </form>
+                            </div>
+                            </div>
 <!--                            <div class="col-sm-6 box-item">-->
 <!--                                  <div class="col-lg-12"><br><br>-->
 
@@ -142,7 +143,8 @@
                                 }
                         </script>
                         </div>
-                        <button class="btn btn-3 btn-sm" onclick="myFunction()" name="print" id="print" style="float: right;">Print</button>
+                        <button class="btn btn-3 btn-sm" onclick="myFunction()" name="print" id="print" style="float: right; ">Print</button>
+                        <button class="btn btn-3 btn-sm"  style="float: right; margin-right: 2%;">Next</button>
                     </div>
                 </section>
      </div>
