--- a/PBSS/users/templates/users/edit_profile.html
+++ b/PBSS/users/templates/users/edit_profile.html
@@ -4,39 +4,76 @@
 {% load crispy_forms_tags %}
 
  <!-- i have to add nav bar which will be redirected to this page.-->
-    <div class="profile-form">
-            <div class="row">
-                <div class="col-mt-3">
-                <div class="content-section">
-                    <div class="content-section">
-                        <div class="media">
-                            <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
-                            <div  class="media-body">
-                                <h2 class="account-heading">{{ user.username }}</h2>
-                                <p class="text-secondary">{{ user.email }}</p>
+<!--    <div class="profile-form">-->
+<!--            <div class="row">-->
+<!--                <div class="col-mt-3">-->
+<!--                <div class="content-section">-->
+<!--                    <div class="content-section">-->
+<!--                        <div class="media">-->
+<!--                            <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">-->
+<!--                            <div  class="media-body">-->
+<!--                                <h2 class="account-heading">{{ user.username }}</h2>-->
+<!--                                <p class="text-secondary">{{ user.email }}</p>-->
 
-                            </div>
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <form method="POST" enctype="multipart/form-data">-->
+<!--                        {% csrf_token %}-->
+<!--                        <fieldset class="form-group">-->
+<!--                            <legend class="border-bottom mb-4 "> Profile Information</legend>-->
+<!--                            {{ u_form|crispy }}-->
+<!--                            {{ p_form|crispy }}-->
+<!--                        </fieldset>-->
+
+<!--                        <div class="form-group">-->
+<!--                            <button class="btn btn-primary btn-block" type="submit" > Update </button>-->
+<!--                        </div>-->
+<!--                    </form>-->
+
+
+<!--                </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            </div>-->
+<!--    </div>-->
+
+            <div id="page-content" class="index-page">
+            <section id="" class="box-content box-1" style="background: white;">
+                <div class="container">
+                    <div class="row heading">
+                        <div class="col-lg-12">
+                            <h2>Edit Profile</h2>
+                            <hr>
+                            <div class="intro">Manage your profile.</div>
                         </div>
                     </div>
-                    <form method="POST" enctype="multipart/form-data">
+                    <div class="row">
+                        <div class="col-sm-3 box-item">
+                            <img class="rounded-circle account-img" src="{{ user.profile.image.url }}" alt="accountpicture">
+                        </div>
+                        <div class="col-sm-6 box-item" style="text-align: left;">
+                             <div  class="media-body">
+                                <h4 class="account-heading">Hello, {{ user.username }}</h4><br>
+                                <p class="text-secondary">{{ user.email }}</p><br>
+                            </div>
+                           <form method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
-                        <fieldset class="form-group">
-                            <legend class="border-bottom mb-4 "> Profile Information</legend>
+                        <fieldset class="form-group"><br>
+                            <legend class="border-bottom mb-4" style="margin-top: 3%;"> Profile Information</legend>
                             {{ u_form|crispy }}
                             {{ p_form|crispy }}
                         </fieldset>
-
                         <div class="form-group">
-                            <button class="btn btn-primary btn-block" type="submit" > Update </button>
+                            <button class="btn btn-3 btn-block" type="submit" >Update</button>
                         </div>
                     </form>
+        <div class="border-top pr-3">
 
-
+            </div></div></div>
                 </div>
-                </div>
-            </div>
-            </div>
-    </div>
+            </section>
+     </div>
 
 
 
