--- a/PBSS/users/templates/users/login.html
+++ b/PBSS/users/templates/users/login.html
@@ -11,7 +11,7 @@
                         <div class="col-lg-12">
                             <h2>Sign in</h2>
                             <hr>
-                            <div class="intro">Lorem ipsum dolor sit amet</div>
+                            <div class="intro">Sign in and manage your profile.</div>
                         </div>
                     </div>
                     <div class="row">
