--- a/PBSS/users/templates/users/profile.html
+++ b/PBSS/users/templates/users/profile.html
@@ -4,12 +4,49 @@
 {% load crispy_forms_tags %}
 
  <!-- i have to add nav bar which will be redirected to this page.-->
-    <div class="profile-form">
-            <div class="row">
-                <div class="col-mt-3">
-                <div class="content-section">
-                    <div class="content-section">
-                        <div class="media">
+<!--    <div class="profile-form">-->
+<!--            <div class="row">-->
+<!--                <div class="col-mt-3">-->
+<!--                <div class="content-section">-->
+<!--                    <div class="content-section">-->
+<!--                        <div class="media">-->
+<!--                        <div >-->
+<!--                        {%  if messages %}-->
+<!--                        {% for message in messages %}-->
+<!--                        <div class="alert alert-{{ message.tags }}" style="text-align: center">-->
+<!--                        {{ message }}-->
+<!--                        </div>-->
+<!--                        {% endfor %}-->
+<!--                        {%  endif %}-->
+<!--                        </div>-->
+<!--                            <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">-->
+<!--                            <div  class="media-body">-->
+<!--                                <h2 class="account-heading">{{ user.username }}</h2>-->
+<!--                                <p class="text-secondary">{{ user.email }}</p>-->
+<!--                                 <a class="btn btn-3 btn-sm" href="{% url 'edit_profile' %}" >Edit Profile</a>-->
+<!--                                <a class="btn btn-3 btn-sm" href="#" >BR Report</a>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            </div>-->
+<!--    </div>-->
+
+         <div id="page-content" class="index-page">
+            <section id="" class="box-content box-1" style="background: white;">
+                <div class="container">
+                    <div class="row heading">
+                        <div class="col-lg-12">
+                            <h2>Dashboard</h2>
+                            <hr>
+                            <div class="intro">Manage work on daily basis.</div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-3 box-item">
+                             <div class="media">
                         <div >
                         {%  if messages %}
                         {% for message in messages %}
@@ -21,22 +58,23 @@
                         </div>
                             <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
                             <div  class="media-body">
-                                <h2 class="account-heading">{{ user.username }}</h2>
-                                <p class="text-secondary">{{ user.email }}</p>
-                                 <a class="btn btn-3 btn-sm" href="{% url 'edit_profile' %}" >Edit Profile</a>
-                                <a class="btn btn-3 btn-sm" href="#" >BR Report</a>
+                              <br>  <p class="text-secondary">{{ user.email }}</p>
+                                 <a class="btn btn-2 btn-sm" href="{% url 'edit_profile' %}" >Edit Profile</a>
+                                <a class="btn btn-2 btn-sm" href="#" >BR Report</a>
                             </div>
                         </div>
-                    </div>
+                        </div>
+                        <div class="col-sm-9 box-item" style="text-align: left;">
+                            <div  class="media-body">
+                                <h4 class="account-heading">Hello, {{ user.username }}</h4><br>
+                                <p class="text-secondary">{{ user.email }}</p><br>
+                            </div>
+        <div class="border-top pr-3">
 
-
-
+            </div></div></div>
                 </div>
-                </div>
-            </div>
-            </div>
-    </div>
-
+            </section>
+     </div>
 
 
 {% endblock content %}
