--- a/PBSS/users/templates/users/register.html
+++ b/PBSS/users/templates/users/register.html
@@ -11,7 +11,7 @@
                         <div class="col-lg-12">
                             <h2>Sign up</h2>
                             <hr>
-                            <div class="intro">Lorem ipsum dolor sit amet</div>
+                            <div class="intro">Be a part of positive behaviour support.</div>
                         </div>
                     </div>
                     <div class="row">
