--- a/PBSS/positivebehaviour/templates/positivebehaviour/base.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/base.html
@@ -53,7 +53,7 @@
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
 					<li>
-                        <a class="page-scroll" href="#{% url 'freefbaform' %}">FBA Form</a>
+                        <a class="page-scroll" href="#fbaform">FBA Form</a>
                     </li>
                     <li>
                          {% if user.is_authenticated %}
@@ -67,7 +67,7 @@
                              <li>
 
                          {% else %}
-                            <a class="page-scroll" href="{% url 'register' %}">Signup</a>
+                            <a class="page-scroll" href="#portal">Signup</a>
                         </li>
                          {% endif %}
 
