--- a/PBSS/freefbaform/templates/freefbaform/freefbaform.html
+++ b/PBSS/freefbaform/templates/freefbaform/freefbaform.html
@@ -11,7 +11,7 @@
                             <hr>
                         </div>
                     </div><button class="btn btn-3 btn-sm" onclick="myFunction()" name="print" id="print" style="float: right;">Print</button>
-                        <button class="btn btn-3 btn-sm"  style="float: right; margin-right: 2%;">Next</button>
+                        <a button class="btn btn-3 btn-sm"  style="float: right; margin-right: 2%;" href="{% url 'profile' %}">Next</a> </button>
                             <div class="row">
                         <div class="col-md-4">
                             <div class="row box-item"><br><br>
@@ -144,7 +144,7 @@
                         </script>
                         </div>
                         <button class="btn btn-3 btn-sm" onclick="myFunction()" name="print" id="print" style="float: right; ">Print</button>
-                        <button class="btn btn-3 btn-sm"  style="float: right; margin-right: 2%;">Next</button>
+                        <a button class="btn btn-3 btn-sm"  style="float: right; margin-right: 2%;" href="{% url 'profile' %}"> Next </a> </button>
                     </div>
                 </section>
      </div>
