--- a/PBSS/freefbaform/templates/freefbaform/fbabase.html
+++ b/PBSS/freefbaform/templates/freefbaform/fbabase.html
@@ -19,8 +19,7 @@
           href="{% static 'css/our-team.css' %}">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
- <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-
+ 	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 
     {% if title %}
         <title>Positive Behaviour - {{ title }}</title>
@@ -31,6 +30,7 @@
 
 <body>
 	<!-- Navigation -->
+	<div id="Header">
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -46,12 +46,13 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+	</div>
 	<!-- Navigation -->
 
 
     {% block content %}{% endblock content %}
     <!-- Footer -->
-	<footer>
+	<footer id="Footer">
 		<div class="wrap-footer">
 			<div class="container-fluid">
 				<div class="row">
