--- a/PBSS/positivebehaviour/templates/positivebehaviour/index.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/index.html
@@ -6,13 +6,11 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="space">
-                        </div>
                         <div class="intro-text"><br><br>
-                            <strong><div class="hero-heading">Helping <span style="color: #2c51d8">People</span>,<br> One step at <span style="color: #2c51d8">a time</span>.</div></strong>
+                            <strong><div class="hero-heading">Helping <span class="border-white" style="color: #2c51d8">People</span>,<br> One step at <span class="border-white" style="color: #2c51d8">a time</span>.</div></strong>
                             <div class="hero-lead-in">Join us today!</div>
                              <div class="col text-left">
-                        <a class="btn btn-3 btn-sm" href="{% url 'register' %}" style="margin-right: 2%; margin-left: 10%;">Signup</a>
+                        <a class="btn btn-3 btn-sm" href="{% url 'register' %}" style="margin-right: 2%; margin-left: 14%;">Signup</a>
                         <a class="btn btn-3 btn-sm" href="{% url 'login' %}" style="margin-left: 10%;">Signin</a>
                          </div>
                         </div>
@@ -49,11 +47,10 @@
                                     </div>
                                     <div class="timeline-panel">
                                         <div class="timeline-heading">
-                                            <h4></h4>
                                             <h4 class="subheading">FBA Tool</h4>
                                         </div>
                                         <div class="timeline-body"><br>
-                                            <p class="text-muted">Concentrate primarily on preventing the occurrence of an identified behaviour by avoiding or adapting the circumstances that usually trigger the behaviour. </p>
+                                            <p class="text-muted" style="line-height: 2;">Concentrate primarily on preventing the occurrence of an identified behaviour by avoiding or adapting the circumstances that usually trigger the behaviour. </p>
                                         </div>
                                     </div>
                                 </li>
@@ -62,12 +59,11 @@
                                         <img class="img-circle img-responsive" src="{% static 'images/5.jpg' %}" alt="">
                                     </div>
                                     <div class="timeline-panel">
-                                        <br><br><div class="timeline-heading">
-    {#                                            <h4>March 2011</h4>#}
-                                            <h4 class="subheading">Business Report</h4>
+                                       <div class="timeline-heading">
+                                           <br> <h4 class="subheading">Business Report</h4>
                                         </div>
                                         <div class="timeline-body"><br>
-                                            <p class="text-muted">Filling a business report for 30 or more days that will link to FBA form that has been created earlier.</p>
+                                            <p class="text-muted" style="line-height: 2;">Filling a business report for 30 or more days that will link to FBA form that has been created earlier.</p>
                                         </div>
                                     </div>
                                 </li>
@@ -76,12 +72,11 @@
                                         <img class="img-circle img-responsive" src="{% static 'images/6.jpg' %}" alt="">
                                     </div>
                                     <div class="timeline-panel">
-                                       <br><br> <div class="timeline-heading">
-{#                                            <h4>December 2012</h4>#}
+                                      <div class="timeline-heading">
                                             <h4 class="subheading">Better understanding</h4>
                                         </div>
                                         <div class="timeline-body"><br>
-                                            <p class="text-muted">Integrating all the collected data into graphs for the visualising and understanding the statistics of the client. </p>
+                                            <p class="text-muted" style="line-height: 2;">Integrating all the collected data into graphs for the visualising and understanding the statistics of the client. </p>
                                         </div>
                                     </div>
                                 </li>
@@ -90,12 +85,11 @@
                                         <img class="img-circle img-responsive" src="{% static 'images/7.jpg' %}" alt="">
                                     </div>
                                     <div class="timeline-panel">
-                                      <br><br>  <div class="timeline-heading">
-{#                                            <h4>July 2014</h4>#}
+                                      <div class="timeline-heading">
                                             <h4 class="subheading">End Summary</h4>
                                         </div>
                                         <div class="timeline-body"><br>
-                                            <p class="text-muted">Provides end summary based on  antecedents, behaviour and consequences with triggers and other behavioural information.</p>
+                                            <p class="text-muted" style="line-height: 2;">Provides end summary based on  antecedents, behaviour and consequences with triggers and other behavioural information.</p>
                                         </div>
                                     </div>
                                 </li>
