--- a/PBSS/users/templates/users/login.html
+++ b/PBSS/users/templates/users/login.html
@@ -27,7 +27,7 @@
                 </fieldset>
 
                 <div class="form-group">
-                    <button class="btn btn-primary btn-block" type="submit" > Sign in </button>
+                    <button class="btn btn-3 btn-sm btn-block" type="submit" > Sign in </button>
 
                 </div></form>
         <div class="border-top pr-3">
