--- a/PBSS/freefbaform/templates/freefbaform/freefbaform.html
+++ b/PBSS/freefbaform/templates/freefbaform/freefbaform.html
@@ -4,7 +4,7 @@
 
     <div id="page-content" class="index-page container-fluid">
                 <section id="" class="box-content box-1" style="background: white; margin-top: 3%;">
-                    <div class="container">
+                    <div class="container-fluid">
                         <div class="row heading">
                         <div class="col-lg-12">
                             <h2>FBA form</h2>
@@ -69,91 +69,148 @@
                             </div>
                         </div>
                     </div>
-                        <div class="row">
-                            <div class="col-sm-6 box-item">
+
+                 <div class="container-fluid">
+                    <div class="col-sm-3 box-item">
                                 <div class="col-lg-12"><br><br>
-                                <h2>Behaviour</h2>
+                                <h4>Behaviour</h4>
                                 <hr>
                                     <form>
+
                                         <div class="intro" style="text-align: left; line-height: 2;">1. When the individual experiences, or is engaged in, one of the following:</div>
-                                       <select id="behaviour" class="select-box">
+                                       <select id="behaviour" class="select-box" onchange="singleSelectChangeValue()">
                                     <option value="behaviour1">--Select an Item--</option>
                                     <option value="behaviour2">Is in the community</option>
                                     <option value="behaviour2">Has recently been disciplined</option>
                                     <option value="behaviour2">Is engaged in an activity or task they dislike</option>
                                       </select>
+
+                                     <!--   <input type="text" id="textFieldTextBehaviour" class="form-control" placeholder="get value on option select"> -->
                                         <div class="intro" style="text-align: left; line-height: 2;">2. Often it’s when someone:</div>
                                         <select id="boptions" class="select-box">
                                         <option value="">-- select one -- </option>
                                     </select>
+                                      <!--  <input type="text" id="textFieldTextboptions" class="form-control" placeholder="get value on option select">  -->
+
                                         <div class="intro" style="text-align: left; line-height: 2;">3. In particular, an:</div>
                                         <select id="ageoptions" class="select-box">
                                         <option value="">-- select one -- </option>
                                     </select>
+                                        <!-- <input type="text" id="textFieldTextageoptions" class="form-control" placeholder="get value on option select"> -->
+
                                         <div class="intro" style="text-align: left; line-height: 2;">4. Interacts with the individual in the following way:</div>
                                         <select id="interactionoptions" class="select-box">
                                         <option value="">-- select one -- </option>
                                     </select>
+                                      <!--  <input type="text" id="textFieldTextinteractionoptions" class="form-control" placeholder="get value on option select"> -->
+                                    </form>
+                            </div>
+                            </div>
+                    <div class="col-sm-3 box-item">
+                                <div class="col-lg-12"><br><br>
+                                 <h4>Anticident</h4><hr>
 
-                                       <br><br> <h2>Anticident</h2>
-                                <hr>
+                                    <form>
                                        <div class="intro" style="text-align: left; line-height: 2;">5. What do you see the observe him/her doing?</div>
                                         <select id="observationoptions" class="select-box">
                                         <option value="">-- select one -- </option>
                                     </select>
+                                      <!--  <input type="text" id="textFieldTextobservationoptions" class="form-control" placeholder="get value on option select"> -->
+
                                         <div class="intro" style="text-align: left; line-height: 2;">6. What changes as a result of the individual engaging in this behaviour?</div>
                                         <select id="enganingoptions" class="select-box">
                                         <option value="">-- select one -- </option>
                                     </select>
+                                       <!-- <input type="text" id="textFieldTextenganingoptions" class="form-control" placeholder="get value on option select"> -->
+
                                          <div class="intro" style="text-align: left; line-height: 2;">7. Select your response from the list below.</div>
                                         <select id="responseoptions" class="select-box">
                                         <option value="">-- select one -- </option>
                                     </select>
+                                       <!-- <input type="text" id="textFieldTextresponseoptions" class="form-control" placeholder="get value on option select"> -->
+                                    </form>
 
-                                        <br><br> <h2>Consequences</h2>
-                                <hr>
-                                     <div class="intro" style="text-align: left; line-height: 2;">8. Select your response from the list below.</div>
+                            </div>
+                            </div>
+                    <div class="col-sm-3 box-item">
+                                <div class="col-lg-12"><br><br>
+                               <h4>Consequences</h4><hr>
+
+                                        <form>
+                                        <div class="intro" style="text-align: left; line-height: 2;">8. Select your response from the list below.</div>
                                         <select id="consequensesoptions" class="select-box">
                                         <option value="">-- select one -- </option>
                                     </select>
+                                      <!--  <input type="text" id="textFieldTextconsequensesoptions" class="form-control" placeholder="get value on option select"> -->
+
                                          <div class="intro" style="text-align: left; line-height: 2;">9. What behaviour would you accept as an alternative while teaching the desired behaviour?</div>
                                         <select id="alternativeoptions" class="select-box">
                                         <option value="">-- select one -- </option>
                                     </select>
+                                      <!--  <input type="text" id="textFieldTextalternativeoptions" class="form-control" placeholder="get value on option select"> -->
+
                                         <div class="intro" style="text-align: left; line-height: 2;">10. Function - The function of behaviour is the reason people behave in a certain way.</div>
                                         <select id="functionoptions" class="select-box">
                                         <option value="">-- select one -- </option>
                                     </select>
-                                    </form>
+                                       <!-- <input type="text" id="textFieldTextfunctionoptions" class="form-control" placeholder="get value on option select"> -->
 
+                                    </form>
                             </div>
                             </div>
-                            <div class="col-sm-6 box-item">
+
+                     <div class="col-sm-3 box-item">
                                 <div class="col-lg-12"><br><br>
-                                <h2>Flowchart</h2>
+                               <h4>Flowchart</h4>
                                 <hr>
                                     <form>
-                                    <img src="{% static 'images/freefbaform.png' %}" alt="freefbaform" class="freefbaform">
+                                        <input type="text" id="textFieldTextBehaviour" class="diagram-control">
+                                        <i class="down"></i>
+                                        <input type="text" id="textFieldTextboptions" class="diagram-control">
+                                        <i class="down"></i>
+                                        <input type="text" id="textFieldTextageoptions" class="diagram-control">
+                                        <i class="down"></i>
+                                        <input type="text" id="textFieldTextinteractionoptions" class="diagram-control">
+                                        <i class="down"></i>
+                                        <input type="text" id="textFieldTextobservationoptions" class="diagram-control">
+                                        <i class="down"></i>
+                                        <input type="text" id="textFieldTextenganingoptions" class="diagram-control">
+                                        <i class="down"></i>
+                                        <input type="text" id="textFieldTextresponseoptions" class="diagram-control">
+                                        <i class="down"></i>
+                                        <input type="text" id="textFieldTextconsequensesoptions" class="diagram-control">
+                                        <i class="down"></i>
+                                        <input type="text" id="textFieldTextalternativeoptions" class="diagram-control">
+                                        <i class="down"></i>
+                                        <input type="text" id="textFieldTextfunctionoptions" class="diagram-control">
+                                  <!--  <img src="{% static 'images/freefbaform.png' %}" alt="freefbaform" class="freefbaform"> -->
                                     </form>
+                                    <div id="Button2">
+                        <button class="btn btn-3 btn-sm" onclick="myFunction()" name="print" id="print" style="float: right; ">Print</button>
+                        <a button class="btn btn-3 btn-sm"  style="float: right; margin-right: 2%;" href="{% url 'profile' %}"> Next </a> </button>
+                        </div>
                             </div>
                             </div>
-<!--                            <div class="col-sm-6 box-item">-->
-<!--                                  <div class="col-lg-12"><br><br>-->
 
-<!--                            </div>-->
-<!--                            </div>-->
+                 </div>
+                <div class="row">
+                            <div class="col-sm-6 box-item">
+                                <div class="col-lg-12"><br><br>
+
+                            </div>
+                            </div>
+
+
                         <script>
                                 function myFunction() {
                                 window.print();
                                 }
                         </script>
                         </div>
-                        <div id="Button2">
-                        <button class="btn btn-3 btn-sm" onclick="myFunction()" name="print" id="print" style="float: right; ">Print</button>
-                        <a button class="btn btn-3 btn-sm"  style="float: right; margin-right: 2%;" href="{% url 'profile' %}"> Next </a> </button>
-                        </div>
+
                     </div>
+
                 </section>
-     </div>
+            </div>
 
 {% endblock content %}
