--- a/PBSS/positivebehaviour/static/css/style.css
+++ b/PBSS/positivebehaviour/static/css/style.css
@@ -520,3 +520,27 @@ a.btn:focus{outline: 0;}
 @media print {
     #Header, #Footer, #Noprint, #Button1, #Button2 { display: none !important; }
 }
+
+i {
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+}
+
+.down {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
+.diagram-control {
+      width: 100%;
+      padding: 12px 5px;
+      margin: 0px 0;
+      box-sizing: border-box;
+      font-size: 10px;
+      overflow-wrap: break-word;
+      word-wrap: break-word;
+      text-align: center;
+      border: none;
+}
