--- a/PBSS/users/templates/users/edit_profile.html
+++ b/PBSS/users/templates/users/edit_profile.html
@@ -1,4 +1,4 @@
-{%  extends "users/userbase.html" %}
+{%  extends "users/dashboardbase.html" %}
 {% block content %}
 {% load static %}
 {% load crispy_forms_tags %}
@@ -10,57 +10,127 @@
 <!--                <div class="content-section">-->
 <!--                    <div class="content-section">-->
 <!--                        <div class="media">-->
+<!--                        <div >-->
+<!--                        {%  if messages %}-->
+<!--                        {% for message in messages %}-->
+<!--                        <div class="alert alert-{{ message.tags }}" style="text-align: center">-->
+<!--                        {{ message }}-->
+<!--                        </div>-->
+<!--                        {% endfor %}-->
+<!--                        {%  endif %}-->
+<!--                        </div>-->
 <!--                            <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">-->
 <!--                            <div  class="media-body">-->
 <!--                                <h2 class="account-heading">{{ user.username }}</h2>-->
 <!--                                <p class="text-secondary">{{ user.email }}</p>-->
-
+<!--                                 <a class="btn btn-3 btn-sm" href="{% url 'edit_profile' %}" >Edit Profile</a>-->
+<!--                                <a class="btn btn-3 btn-sm" href="#" >BR Report</a>-->
 <!--                            </div>-->
 <!--                        </div>-->
 <!--                    </div>-->
-<!--                    <form method="POST" enctype="multipart/form-data">-->
-<!--                        {% csrf_token %}-->
-<!--                        <fieldset class="form-group">-->
-<!--                            <legend class="border-bottom mb-4 "> Profile Information</legend>-->
-<!--                            {{ u_form|crispy }}-->
-<!--                            {{ p_form|crispy }}-->
-<!--                        </fieldset>-->
-
-<!--                        <div class="form-group">-->
-<!--                            <button class="btn btn-primary btn-block" type="submit" > Update </button>-->
-<!--                        </div>-->
-<!--                    </form>-->
-
-
 <!--                </div>-->
 <!--                </div>-->
 <!--            </div>-->
 <!--            </div>-->
 <!--    </div>-->
+        <main>
+        <div class="page-wrapper chiller-theme toggled">
+  <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
+    <i class="fas fa-bars"></i>
+  </a>
+  <nav id="sidebar" class="sidebar-wrapper">
+    <div class="sidebar-content">
+      <div class="sidebar-brand">
+          <a class="navbar-brand page-scroll" style="font-size: 26px;" href="{% url 'index' %}">PBSS</a>
+      </div>
+        <div>
+                        {%  if messages %}
+                        {% for message in messages %}
+                        <div class="alert alert-{{ message.tags }}" style="text-align: center">
+                        {{ message }}
+                        </div>
+                        {% endfor %}
+                        {%  endif %}
+                        </div>
+      <div class="sidebar-header">
+        <div class="user-pic">
+          <img class="img-responsive img-rounded" src="{{ user.profile.image.url }}"
+            alt="User picture">
+        </div>
 
-            <div id="page-content" class="index-page">
-            <section id="" class="box-content box-1" style="background: white;">
-                <div class="container">
+
+
+        <div class="user-info">
+          <span class="user-name" style="margin-top: 6%; margin-bottom: 6%;">Hello, {{ user.username }}</span>
+            <span class="user-name" style="margin-top: 6%;">Mail ID:</span>  <span class="user-name" style="margin-top: 6%;">{{ user.email }}</span>
+        </div>
+      </div>
+
+
+      <!-- sidebar-search  -->
+      <div class="sidebar-menu">
+        <ul>
+          <li class="header-menu">
+            <span style="font-size: 24px; margin-top: 4%; margin-bottom: 4%;">General</span>
+          </li>
+             <li class="sidebar-dropdown">
+           <a href="{% url 'profile' %}">
+              <span>Home</span>
+            </a>
+          </li>
+          <li class="sidebar-dropdown">
+           <a href="{% url 'edit_profile' %}">
+              <span>Edit Profile</span>
+            </a>
+          </li>
+          <li class="sidebar-dropdown">
+            <a href="{% url 'fbaform' %}" >
+              <span>BR Report</span>
+            </a>
+          </li>
+          <li class="sidebar-dropdown">
+            <a href="{% url 'fbaform' %}" >
+              <span>FBA form</span>
+            </a>
+          </li>
+            <li class="sidebar-dropdown">
+            <a href="{% url 'logout' %}" >
+              <span>Logout</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <!-- sidebar-menu  -->
+    </div>
+
+  </nav>
+  <!-- sidebar-wrapper  -->
+  <div class="page-content">
+    <div class="container-fluid">
+       <h2 style="text-align: center;">Dashboard</h2>
+        <hr>
+      <div class="row">
+        <div class="form-group col-md-12">
+          <p style="text-align: center;">Manage work on daily basis.</p>
+        </div>
+      </div>
+        <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+             <div class="container">
                     <div class="row heading">
-                        <div class="col-lg-12">
-                            <h2>Edit Profile</h2>
-                            <hr>
-                            <div class="intro">Manage your profile.</div>
+                        <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
+                            <h4>Edit Profile</h4>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-3 box-item">
-                            <img class="rounded-circle account-img" src="{{ user.profile.image.url }}" alt="accountpicture">
+                            <img class="img-responsive img-rounded" src="{{ user.profile.image.url }}" alt="accountpicture">
                         </div>
-                        <div class="col-sm-6 box-item" style="text-align: left;">
-                             <div  class="media-body">
-                                <h4 class="account-heading">Hello, {{ user.username }}</h4><br>
-                                <p class="text-secondary">{{ user.email }}</p><br>
-                            </div>
+                        <div class="col-sm-8 box-item" style="text-align: left;">
                            <form method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
                         <fieldset class="form-group"><br>
-                            <legend class="border-bottom mb-4" style="margin-top: 3%;"> Profile Information</legend>
+                            <legend class="border-bottom mb-4"> Profile Information</legend>
                             {{ u_form|crispy }}
                             {{ p_form|crispy }}
                         </fieldset>
@@ -72,9 +142,9 @@
 
             </div></div></div>
                 </div>
-            </section>
-     </div>
-
-
+        </div>
+        </div>
+    </div></div></div>
+  </main>
 
 {% endblock content %}
