Contact us using forms functionality

--- a/PBSS/positivebehaviour/static/css/style.css
+++ b/PBSS/positivebehaviour/static/css/style.css
@@ -544,3 +544,25 @@ i {
       text-align: center;
       border: none;
 }
+
+
+.box-content.box-5 input {
+    height: 46px;
+padding: 10px 16px;
+font-size: 18px;
+line-height: 1.3333333;
+border-radius: 6px;
+}
+
+.box-content.box-5 textarea{
+    height: 146px;
+padding: 10px 16px;
+font-size: 18px;
+line-height: 1.3333333;
+border-radius: 6px;
+    width: 200%;
+}
+
+.form-control{
+    border: none;
+}
